Updated dark accent color to improve text visibility, still encountering double scrollbar issue on webkit browsers

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,8 @@ html {
 html,
 body {
   /* border: 5px solid red; */
-  -webkit-overflow-scrolling: touch;
+  /* -webkit-overflow-scrolling: touch; */
   max-width: 100%;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
